# quiverdb

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CMakeLists.txt  CMakePresets.json  Doxyfile  GEMINI.md  LICENSE  README.md  SECURITY.md  conanfile.txt  pyproject.toml
.github/: Dockerfile.arm64-test
.github/workflows/: build-and-test.yml  docs.yml  publish.yml
benchmarks/: bench_distance.cpp  bench_hnsw_index.cpp  bench_vector_store.cpp
cmake/toolchains/: android.toolchain.cmake  ios.toolchain.cmake
docs/: GUIDE.md
examples/: semantic_search_example.cpp
python/: quiverdb.cpp
src/core/: distance.h  hnsw_index.h  mmap_vector_store.h  vector_store.h  version.h
src/core/gpu/: cuda_distance.cuh  gpu_distance.h  metal_distance.h
src/utils/: logging.h
tests/: test_distance.cpp  test_hnsw_index.cpp  test_metal_distance.mm  test_mmap_vector_store.cpp  test_python_bindings.py  test_vector_store.cpp
